fetching data through Http server

--- a/src/app/Components/hero-detail/hero-detail.component.html
+++ b/src/app/Components/hero-detail/hero-detail.component.html
@@ -8,4 +8,6 @@
         <label for="name">hero name: </label>
         <input id="name" [(ngModel)]="hero.name" placeholder="name">
     </div>
+
+    <button (click)="goBack()">go back</button>
   </div>
