--- a/src/app/Components/heroes/heroes.component.css
+++ b/src/app/Components/heroes/heroes.component.css
@@ -1,30 +1,54 @@
-.badge{
-    padding: 7px;
-    font-size: 12px;
-    font-weight: 600;
-    color: wheat;
-    background-color: rgb(63, 63, 63);
-}
-.listItems{
-    width: max-content;
-    padding:0px 15px 0px 10px;
-    border-radius: 5px;
-    border: 0.1px solid rgb(207, 206, 206);
-}
-ul{
-    padding-left: 0px;
-}
-ul li{
-    padding: 10px 5px;
-    background-color: rgb(226, 226, 226);
-    border-radius: 5px;
-    margin-bottom: 10px;
-    list-style: none;
+/* HeroesComponent's private CSS styles */
+.heroes {
+    margin: 0 0 2em 0;
+    list-style-type: none;
+    padding: 0;
+    width: 15em;
+  }
+  .heroes li {
+    position: relative;
     cursor: pointer;
-}
-ul li:hover{
-    background-color: lightgrey;
-}
-.selected{
-    background-color: lightseagreen;
-}
+  }
+  
+  .heroes li:hover {
+    left: .1em;
+  }
+  
+  .heroes a {
+    color: #333;
+    text-decoration: none;
+    background-color: #EEE;
+    margin: .5em;
+    padding: .3em 0;
+    height: 1.6em;
+    border-radius: 4px;
+    display: block;
+    width: 100%;
+  }
+  
+  .heroes a:hover {
+    color: #2c3a41;
+    background-color: #e6e6e6;
+  }
+  
+  .heroes a:active {
+    background-color: #525252;
+    color: #fafafa;
+  }
+  
+  .heroes .badge {
+    display: inline-block;
+    font-size: small;
+    color: white;
+    padding: 0.8em 0.7em 0 0.7em;
+    background-color:#405061;
+    line-height: 1em;
+    position: relative;
+    left: -1px;
+    top: -4px;
+    height: 1.8em;
+    min-width: 16px;
+    text-align: right;
+    margin-right: .8em;
+    border-radius: 4px 0 0 4px;
+  }
